Refactored MAV by creating a balmi class in balmi.user.js library that provides methods to add menus to the Moodle.
Update GM_balmi_config.js class to use private variables instead of public properties.

Integrated the makealink style into balmi class and removed from MAVStyles.css

--- a/gmdocs/MAVStyles.css
+++ b/gmdocs/MAVStyles.css
@@ -89,9 +89,10 @@ a.makealink {
 	cursor: pointer;	
 	color: #2069C8;
 }
-a.makealink:visited {
+/*a.makealink:visited {
 	color: #818600 !important;
 }
 a.makealink:hover {
 	color: #c6006f !important;
 }
+*/
